[workspace]
members = [
    "crates/pulzar-cli",
    "crates/pulzar-syntax",
    "crates/pulzar-lexer",
    "crates/pulzar-parser",
    "crates/pulzar-sema",
    "crates/pulzar-output",
    "crates/pulzar-builtins",
    "crates/pulzar-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
pulzar-syntax = { path = "crates/pulzar-syntax" }
pulzar-lexer = { path = "crates/pulzar-lexer" }
pulzar-parser = { path = "crates/pulzar-parser" }
pulzar-sema = { path = "crates/pulzar-sema" }
pulzar-output = { path = "crates/pulzar-output" }
pulzar-builtins = { path = "crates/pulzar-builtins" }
pulzar-runtime = { path = "crates/pulzar-runtime" }
ctrlc = "3.4.5"
