[package]
name = "pulzar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pulzar-lexer.workspace = true
pulzar-output.workspace = true
pulzar-parser.workspace = true
pulzar-runtime.workspace = true
pulzar-sema.workspace = true
pulzar-syntax.workspace = true
